--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -16,6 +16,17 @@
 -->
 
 <script>
+// dienas
+var days = ['Pirmdiena', 'Otrdiena', 'Trešdiena', 'Ceturtdiena', 'Piektdiena', 'Sestdiena', 'Svētdiena']
+$(document).ready(function(){
+  var day = document.getElementsByTagName("p");
+  var count = 6;
+  for (i = day.length-1; i > -1 ; i--) {
+    day.item(i).innerHTML = days[count];
+    count--;
+  }
+})
+
 jQuery(document).ready(function($) {
     $(".clickable-row").click(function() {
         window.location = $(this).data("href");
@@ -92,7 +103,7 @@ jQuery(document).ready(function($) {
 </tr></thead>
 <tbody>
 {% for dat in data %}
-<tr style="background-color: rgba(210,130,240, 0.7) !important;"><td colspan="7"></td></tr>
+<tr style="background-color: rgba(210,130,240, 0.7) !important;"><td colspan="7"><center><b><p style="margin-bottom: 0px;"></p></b></center></td></tr>
 {% for d in dat %}
 <tr>
  <td style="text-align: center;">{{ d.sakums|date:"d/m" }}</td>
