--- a/grafiks/templates/klienti.html
+++ b/grafiks/templates/klienti.html
@@ -88,13 +88,13 @@ function startTimer(duration, display) {
   <table class="table table-hover table-striped table-condensed">
     <thead>
       <tr style="background: #aaa;">
- <th>Vārds</th>
- <th>E-pasts</th>
- <th>Tālrunis</th>
- <th>Pirmais pieteikums</th>
- <th>Pēdējais pieteikums</th>
- <th>Pieteikumu reizes</th>
- <th>Attteikumu reizes</th>
+ <th style="vertical-align: top;">Vārds</th>
+ <th style="vertical-align: top;">E-pasts</th>
+ <th style="vertical-align: top;">Tālrunis</th>
+ <th style="vertical-align: top;">Pirmais pieteikums</th>
+ <th style="vertical-align: top;">Pēdējais pieteikums</th>
+ <th style="vertical-align: top;">Pieteikumi</th>
+ <th style="vertical-align: top;">Atteikumi</th>
       </tr>
     </thead>
     <tbody>
