--- a/pieraksts/templates/canceled.html
+++ b/pieraksts/templates/canceled.html
@@ -7,9 +7,7 @@
 </div>
 <div class="row">
  <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-offset-1">
-  <h4><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba }}</h4>
-<!--  <h4><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"d/m/Y" }}</h4> -->
-<!--  <h4><span class="glyphicon glyphicon-time" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"H:i" }}</h4> -->
+  <h4><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.nodarbiba }} - {{ data.nodarbiba.sakums|date:"d/m/Y H:i" }} </h4>
  </div>
  <div class="form-group" style="margin-top: 10px;">
   <center><a href="/"><input class="btn btn-default" value="Uz sākumu"></a></center>
