--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -21,19 +21,6 @@ $(document).ready(function(){
   <center><strong>!!! Nodarbību atcelšana !!!</strong></center>
 </div>
 
-<!--
-<div class="alert alert-danger">
-  <center>!!!!! Lai atceltu nodarbības sākot no konkrēta datuma un izņemtu no Plānotāja: !!!!!<br>
-  <strong><b>"Izmaiņas Grafikā" >> "Izņemt nodarbību no Plānotāja"</b></strong></center>
-</div>
--->
-
-<!--
-<div class="alert alert-warning">
-  <center><strong>!!! Pievienotas pogas: uz nākamo nedēļu / uz iepriekšējo nedēļu !!!</strong></center>
-</div>
--->
-
 <script>
 jQuery(document).ready(function($) {
     $(".clickable-row").click(function() {
@@ -77,11 +64,12 @@ jQuery(document).ready(function($) {
 <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span> Uz iepriekšējo nedēļu</button></a></center><br>
 {% endif %}
 
-<div class="container">
+<div class="container" style="margin-top: 5px;">
 <table class="table table-hover table-striped table-condensed">
-<thead><tr>
- <th>Diena</th>
- <th colspan="2">Nodarbības laiks</th>
+<thead><tr style="background: #aaa;">
+ <th></th>
+ <th>Datums</th>
+ <th>Nodarbības laiks</th>
  <th>Nodarbība</th>
  <th>Treneris</th>
  <th>Zāle</th>
