--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -50,8 +50,6 @@ jQuery(document).ready(function($) {
 {% else %}
 
 
-
-
 {% for dat in data %}{% for d in dat %}
 <div class="modal fade" id="Tren{{ d.id }}" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
  <span class="glyphicon glyphicon-trash" aria-hidden="true" style="font-size:1.5em;"></span>
@@ -74,7 +72,7 @@ jQuery(document).ready(function($) {
 </div></div></div>
 {% endfor %}{% endfor %}
 
-
+<!--
 <div class="modal fade" id="TrenModal" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
  <span class="glyphicon glyphicon-refresh" aria-hidden="true" style="font-size:1.5em;"></span>
  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button></div>
@@ -83,7 +81,7 @@ jQuery(document).ready(function($) {
  <a href="/reception/tren/{{ w_id }}/replace/1/"><button type="button" class="btn btn-danger">Aizvietot treneri</button></a>
  <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
 </div></div></div></div>
-
+-->
 
 <a href="/reception/tren/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ pie nedēļu izvēles</button></a><br>
 
@@ -92,10 +90,11 @@ jQuery(document).ready(function($) {
 <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span> Uz iepriekšējo nedēļu</button></a></center><br>
 {% endif %}
 
-<div class="container">
+<div class="container" style="margin-top:5px;">
 <table class="table table-hover table-striped table-condensed">
-<thead><tr>
- <th colspan="2" style="text-align: center;">Diena / Nodarbības laiks</th>
+<thead><tr style="background: #aaa;">
+ <th>Datums</th>
+ <th>Nodarbības sākums</th>
  <th>Nodarbība</th>
  <th colspan="2" style="text-align: center;">Treneris</th>
  <th>Zāle</th>
@@ -106,7 +105,7 @@ jQuery(document).ready(function($) {
 <tr style="background-color: rgba(210,130,240, 0.7) !important;"><td colspan="7"><center><b><p style="margin-bottom: 0px;"></p></b></center></td></tr>
 {% for d in dat %}
 <tr>
- <td style="text-align: center;">{{ d.sakums|date:"d/m" }}</td>
+ <td>{{ d.sakums|date:"d/m" }}</td>
  <td>{{ d.sakums|date:"H:i" }}</td>
  <td>{{ d.nodarbiba }}</td>
  <td><button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#Tren{{ d.id }}">Aizvietot Treneri</button></td>
