planotajs delete nav Grafiks remove

--- a/grafiks/templates/del_plan.html
+++ b/grafiks/templates/del_plan.html
@@ -57,6 +57,11 @@ function startTimer(duration, display) {
 
 {% block content %}
 
+<div class="alert alert-danger">
+  <center><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+  <strong> NAV GATAVS, NEAIZTIKT :)</strong></center>
+</div>
+
 {% if date_error %}
 <div class="alert alert-danger">
   <center><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
