search-ok, super-->admin

--- a/grafiks/templates/del_plan.html
+++ b/grafiks/templates/del_plan.html
@@ -69,7 +69,7 @@ function startTimer(duration, display) {
 <!-- Planotajs Modal START -->
 <div class="modal fade" id="Planotajs" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog modal-lg"><div class="modal-content">
 <div class="modal-header">
- <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;Izņemt nodarbību no plānotāja</h3>
+ <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>&nbsp;&nbsp;Izņemt nodarbību no plānotāja</h3>
 </div>
 <div class="modal-body">
 <form action="/reception/plan/" method="post">{% csrf_token %}
