--- a/templates/admin.html
+++ b/templates/admin.html
@@ -41,12 +41,11 @@
   <li><a href="/reception/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if admin %}
   <li class="divider-vertical"></li>
-<!--  <li><a href="/admin/nodarb/" target="_blank" style="background-color: #FF8080;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> &nbsp;Nodarbību veidi/Treneri</a></li> -->
   <li style="background-color: #FF8080;" class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;izmaiņas grafikā&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
-     <li style="background-color: #FF8080;"><a href="/reception/graf/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
+     <li><a href="/reception/graf/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
      <li><a href="/reception/plan/"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Izņemt nodarbību no plānotāja</a></li>
     </ul>
   </li>
@@ -67,22 +66,26 @@
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
-     <li style="background-color: #FF8080;"><a href="/reception/add/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li>
+     <li><a href="/reception/add/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li>
      <li><a href="#"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Izveidot jaunu nodarbību</a></li>
      <li><a href="#"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Labot nodarbību kartiņu</a></li>
     </ul>
   </li>
   <li class="divider-vertical"></li>
-
-<!--  <li class="divider-vertical"></li> -->
 {% endif%}
  </ul>
 
  <ul class="nav navbar-nav navbar-right">
-{% if super %}
-  <li><a href="/admin/"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: #CC0000;"></span> &nbsp;Django</a></li>
+{% if django %}
+  <li class="divider-vertical"></li>
+  <li style="background-color: #999;">
+    <a href="/admin/" target="_blank" style="color: #CC0000;"><span class="glyphicon glyphicon-cog" aria-hidden="true" style="color: #CC0000;"></span> &nbsp;Django</a>
+  </li>
+  <li class="divider-vertical"></li>
 {% endif %}
-  <li><a href="#" style="color: #CC0000;" data-toggle="modal" data-target="#Help"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: #CC0000;"></span> &nbsp;Palīdzība</a></li>
+  <li><a href="#" style="color: #CC0000;" data-toggle="modal" data-target="#Help">
+    <span class="glyphicon glyphicon-info-sign" aria-hidden="true" style="color: #CC0000;"></span> &nbsp;Palīdzība</a>
+  </li>
   <li><a href="/reception/logout/"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> &nbsp;Iziet no sistēmas</a></li>
  </ul>
 
