admin views-split

--- a/grafiks/templates/treneri.html
+++ b/grafiks/templates/treneri.html
@@ -52,9 +52,9 @@ function startTimer(duration, display) {
     <td id="ke_pasts"></td>
     <td id="ktel"></td>
    </tr><tr>
-    <td><div class="form-group"><input type="text" id="vards" name="vards" class="form-control"></div></td>
-    <td><div class="form-group"><input type="text" id="e_pasts" name="e_pasts" class="form-control"></div></td>
-    <td><div class="form-group"><input type="text" id="tel" name="tel" class="form-control"></div></td>
+    <td><input type="text" id="vards" name="vards"></td>
+    <td><input type="text" id="e_pasts" name="e_pasts"></td>
+    <td><input type="text" id="tel" name="tel"></td>
    </tr></tbody>
   </table>
 </div>
