--- a/templates/admin.html
+++ b/templates/admin.html
@@ -57,7 +57,7 @@
     <ul class="dropdown-menu">
      <li><a href="/reception/tren/"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Aizvietot vienai nodarbībai</a></li>
      <li><a href="#"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Aizvietot sākot no konrēta datuma</a></li>
-     <li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Labot treneru kartiņu</a></li>
+     <li><a href="/reception/treneri/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Labot treneru kartiņu</a></li>
     </ul>
   </li>
   <li class="divider-vertical"></li>
@@ -67,8 +67,8 @@
      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
      <li><a href="/reception/add/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot nodarbību</a></li>
-     <li><a href="#"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Izveidot jaunu nodarbību</a></li>
-     <li><a href="#"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Labot nodarbību kartiņu</a></li>
+<!--     <li><a href="#"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Izveidot jaunu nodarbību</a></li> -->
+     <li><a href="/reception/nodarbibas/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Labot nodarbības kartiņu</a></li>
     </ul>
   </li>
   <li class="divider-vertical"></li>
