--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -32,6 +32,20 @@ jQuery(document).ready(function($) {
         window.location = $(this).data("href");
     });
 });
+
+var countdown;
+function submit_changes(mod) { clearInterval(countdown); document.querySelector("#yes"+mod).value = "Izmaiņas tiek apstiprinātas"; }
+function cancel(mod) { $("#yes"+mod).hide(); $("#ok"+mod).show(); clearInterval(countdown); }
+function apply(mod) {
+  $("#yes"+mod).show(); $("#ok"+mod).hide(); var slidetime = 14,
+  display = document.querySelector("#yes"+mod); startTimer(slidetime, display, mod);
+}
+function startTimer(duration, display, mod) {
+  var timer = duration, seconds = 15; countdown = setInterval( function () {
+    seconds = parseInt(timer % 60, 10); // seconds = seconds < 10 ? "0" + seconds : seconds;
+    display.value = "Apstiprināt izmaiņas (" + seconds + ") ?"; --timer;
+    if (seconds < 1) { $("#yes"+mod).hide(); $("#ok"+mod).show(); clearInterval(countdown); }
+  }, 1000);}
 </script>
 {% if week %}
 <div class="container">
@@ -65,23 +79,13 @@ jQuery(document).ready(function($) {
  </div> 
 </div>
 <div class="modal-footer">
- <input class="btn btn-danger" type="submit" value="Aizvietot treneri">
- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
+ <input class="btn btn-danger pull-left" type="submit" value="Apstiprināt izmaiņas (15) ?" style="display: none;" id="yes{{ d.id }}" onclick="submit_changes({{ d.id }});">
+ <button type="button" class="btn btn-danger" onclick="apply({{ d.id }});" id="ok{{ d.id }}">Veikt izmaiņas</button>
+ <button type="button" class="btn btn-default" data-dismiss="modal" onclick="cancel({{ d.id }});">Aizvērt</button>
 </div>
 </form>
 </div></div></div>
 {% endfor %}{% endfor %}
-
-<!--
-<div class="modal fade" id="TrenModal" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
- <span class="glyphicon glyphicon-refresh" aria-hidden="true" style="font-size:1.5em;"></span>
- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button></div>
-<div class="modal-body"><h4>{{ d.nodarbiba }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ d.treneris }}</h4><h4>{{ d.sakums|date:"d/M/Y H:i" }}</h4></div>
-<div class="modal-footer">
- <a href="/reception/tren/{{ w_id }}/replace/1/"><button type="button" class="btn btn-danger">Aizvietot treneri</button></a>
- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
-</div></div></div></div>
--->
 
 <a href="/reception/tren/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ pie nedēļu izvēles</button></a><br>
 
