--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -34,7 +34,7 @@ jQuery(document).ready(function($) {
 {% if title >= shodiena %}
  <td>
   {% if d.vietas != 0 %}<a href="/reception/pierakstities/{{ d_id }}/{{ d.id }}/"><button type="button" class="btn btn-success btn-xs">Pierakstīties</button></a>{% endif %}
-  {% if d.vietas < 1 and super == True %}<a href="/reception/pierakstities/{{ d_id }}/{{ d.id }}/"><button type="button" class="btn btn-danger btn-xs">Pierakstīties</button></a>{% endif %}
+  {% if d.vietas < 1 and admin == True %}<a href="/reception/pierakstities/{{ d_id }}/{{ d.id }}/"><button type="button" class="btn btn-danger btn-xs">Pierakstīties</button></a>{% endif %}
  </td>
 {% endif %}
 </tr>
